# LABARCHEVM

./: CMakeLists.txt  makefile  new.txt
src/: main.cpp  myBigChars.cpp  myBigChars.h  myReadKey.cpp  myReadKey.h  mySimpleComputer.cpp  mySimpleComputer.h  mySimpleHandler.cpp  mySimpleHandler.h  myTerm.cpp  myTerm.h
